creating more two pages, still need to add a design. Creating chart component, list of fermentations and Fermentation. Creating GetDataService.

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,6 +4,18 @@
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
 
+    <!-- Google Fonts used -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Arvo|Quicksand"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      media="screen"
+      href="https://fontlibrary.org/face/glacial-indifference"
+      type="text/css"
+    />
+
     <!-- Compiled and minified CSS -->
     <link
       rel="stylesheet"
